# humann4_tools

./: .gitignore  CLAUDE.md  ExampleFileList.txt  QSCCSampleKey20250225.csv  QSCFiles.txt  README.md  THIRD_PARTY_LICENSES  TestKey.csv  TestScript.sh  ToDo.md  activate_env.sh  clean_metadata.csv  cli_example.py  differential_abundance_gpt.py  humann4-tools-test-scripts.txt  install_guide.md  new_imports_fix.py  pyproject.toml  requirements.txt  setup.py  setup_redundant.py  test_imports.py  update_imports.py
config/: default_config.json
init/: cli_init.py
src/: __init__.py  logger.py  main.py
src/humann4_tools/: __init__.py  logger.py
src/humann4_tools/analysis/: __init__.py  differential_abundance.py  metadata.py  statistical.py  visualizations.py
src/humann4_tools/cli/: __init__.py  __init__backupmain.py  diff_cli.py  humann4_cli.py  humann4_cli_old.py  humann4_cli_trying_to_fix_args_parser.py  join_cli.py  kneaddata_cli.py  main_cli.py  main_cli_simple.py  stats_cli.py  viz_cli.py
src/humann4_tools/core/: __init__.py  humann4.py  kneaddata.py
src/humann4_tools/humann4/: __init__.py  gene_processing.py  join_unstratify.py  pathway_processing.py
src/humann4_tools/preprocessing/: __init__.py  humann4_run.py  kneaddata.py  parallel.py  pipeline.py  preprocessing_cli.py
src/humann4_tools/utils/: cmd_utils.py  file_utils.py  input_handler.py  metadata_utils.py  resource_utils.py  sample_utils.py
utils/: utils_init.py
